# nptools

./: .gitignore  CMakeLists.txt.template  README  doxygen.conf
include/: cosmoutils.h  eigen_utils.h  gslwrap.h  gtest  multi_array_wrap.h  np_functional.h  npio.h  tclap
modules/cfitsio/: compile
modules/healpix/: compile
modules/npgsl/: CMakeLists.txt  gslhist.cpp
modules/wfirst_fisher/: CMakeLists.txt  bao_forecast.cpp  bao_forecast.h  bao_test_for_cahn.cpp  combine_detf_fisher.cpp  combine_fomswg_fisher.cpp  fisher_utils.cpp  fisher_utils.h  fomswg.cpp  fomswg.h  fomswg2detf.cpp  fomswg_stage3.cpp  fomswg_to_detf.cpp  mk_rsd_fisher.cpp  mk_sn_fisher.cpp  test_detf_cosmology.cpp  unittest.cpp  wfirst_detf.cpp  wfirst_detf.h  zspace.cpp  zspace.h
sandbox/HewettWild/: CMakeLists.txt  linelist.cpp  linelist.h  spdata.cpp  spdata.h  unittest.cpp
sandbox/baofisher/: CMakeLists.txt  bao_forecast.c  bao_forecast.h  fomswg.cpp  fomswg.h  forecast.cpp  forecast.h  unittest.cpp
sandbox/gtest_example/: CMakeLists.txt  eg1.cpp  eg1.h  eg1_test.cpp
sandbox/phoenix/: CMakeLists.txt  test1.cpp
sandbox/velocity_divergence/: CMakeLists.txt  RULES.txt  gslhist.h  multi_array_wrap.h  test_array.cpp  timing_ma.cpp  veldiv.cpp  zspace_pk.cpp
